Fix colours for light and dark mode

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,3 @@
-.tagline {
-  color: var(--mantine-color-gray-6);
+body {
+  background-color: "yellow";
 }
